Modify .gitignore files (whitelist mode)

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,2 @@
-bin
-.settings
-.metadata
-data
-lib
-
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-*.log
-*.sql
-*.sqlite
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-desktop.ini
+/*
+!/src/
