Add a comment to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
+#
+# Anything that is not a `*.java' file in `src/' directory
+# will get rejected at an attempt to push to the server.
+#
+
 /*
 !/src/
