--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,29 @@
 #
-# WARNING: Anything that is not a `*.java' file in `src/'
-# directory will get rejected at an attempt to push to the
-# server. (This is a server-side check!)
-#
-# 1) Ignore everything not in /src/ in project root.
-# 2) ... or not in /doc/.
-#
-
-/*
-!/src/
-!/doc/
-
-#
 # File-type ignores; unfortunately...
 #
 # *
 # !*.java
 # !*/
 #
-# ... won't work in EGit (while it does in git). =/
+# ... won't work in EGit (while it does in plain git). =/
 # This also, unfortunately ignores any directory containing
 # a dot `.' in its name. Adding `!*/' unignores all subdir
 # contents, regardless of their extension. EGit bug that is.
 #
-# 2) Ignore all non-*.java files
-#
 
 *.*
+
+#
+# Source filters
+#
+
 !*.java
+
+#
+# Lib filters
+#
+
+!*.jar
 
 #
 # LaTeX filters
